# OMEGA_OS_Kernel

./: .gitignore  BLUEPRINT_HFT_ESCALONAMENTO_DINAMICO.md  BLUEPRINT_TECNICO_GATEKEEPER_V2.md  CEO_APROVAL_20260409.txt  CERTIFICADO_CONFORMIDADE_OMEGA_V5_3_FINAL.md  DIAGNOSTICO_MORTAL_V3.md  DOC-TESTES-FASE2-FATIA1.md  DOCUMENTACAO_TECNICA_PARR_F.md  DOSSIE_INSTITUCIONAL_OMEGA_V5_3.md  FORENSIC_BOARD_REPORT.md  GOLDEN_PROFILE_AEROSPACE_DOC.md  HYPER_AUDIT_FOCAL_V550.csv  OMEGA_SUPREME_RELATORIO_FINAL_V3.2.1.md  OMEGA_SUPREME_REPORT.md  PROPOSTA_CONSELHO_GATEKEEPER.md  PROPOSTA_CONSELHO_GATEKEEPER_V3.md  PROTOCOLO_HOMOLOGACAO_V550.md  README.md  RECONCILIATION_AUDIT_V5.9.0.md  RELATORIO_ADFO_OPS_XAUUSD.md  RELATORIO_CONSOLIDADO_CONSELHO.md  REPLAY_FOCAL_M1_2026.csv  REPLAY_STRUCTURAL_2019_2026.csv  REPLAY_STRUCTURAL_V550_RIGOROUS.csv  align_prfs.py  analyze_coverage.py  audit_failure.py  audit_full.txt  backtest_institutional_audit.py  check_demo_status.py  check_history.py  check_positions.py  check_prices.py  check_sym_names.py  cost_oracle_v550.py  create_certificate.py  debug_export.py  debug_signal.py  deep_forensics_results.json  deep_historical_audit.py  (+100 more)
OHLCV_DATA/: _INDEX.csv  (+1 more)
modules/DOS_MODULE/: dos_trading_v1.py  pyproject.toml
modules/DOS_MODULE/omega_dos/: __init__.py  bridge_fin_sense.py  pipeline.py
modules/DOS_MODULE/omega_dos/metrics/: clustering.py  institutional.py  pnl.py
modules/DOS_MODULE/omega_dos/sql/: ddl_dos.sql
modules/DOS_MODULE/omega_dos/trading/: __init__.py  backtrader_dos.py  dos_trading_v1.py
modules/DOS_MODULE/tests/: conftest.py  test_dos_trading_mt5_smoke.py  test_institutional_metrics.py  test_pipeline_synthetic.py
modules/FIN_SENSE_DATA_MODULE/: DOCUMENTATION.md  pyproject.toml
modules/FIN_SENSE_DATA_MODULE/fin_sense_data_module/: __init__.py  core_ingestor.py  demo_log_swing_ingest.py
modules/FIN_SENSE_DATA_MODULE/scripts/: ingest_demo_to_bronze.py  ingest_pipeline.py  validate_hub_integrity.py
modules/FIN_SENSE_DATA_MODULE/sql/: ddl_bronze_demo_log.sql
(+1045 files in other folders)
