[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "omega-dos"
version = "1.1.0"
description = "OMEGA Data Operating System — métricas, risco e relatórios sobre FIN-SENSE DATA MODULE"
readme = "DOCUMENTATION.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]
reports = ["openpyxl>=3.1", "xlsxwriter>=3.1"]
backtrader = ["backtrader>=1.9.76"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["omega_dos*"]

[tool.setuptools.package-data]
omega_dos = ["py.typed", "sql/*.sql"]
