[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fin-sense-data-module"
version = "1.2.0"
description = "FIN-SENSE hub canónico (SSOT) — 23 tabelas, v1.2"
readme = "DOCUMENTATION.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["fin_sense_data_module*"]

[tool.setuptools.package-data]
fin_sense_data_module = ["py.typed"]
