[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fin-sense-data-module"
version = "1.2.0"
description = "FIN-SENSE hub canónico (SSOT) — 23 tabelas, v1.2"
readme = "DOCUMENTATION.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
# Fase 2 Fatia 1 — ingestão CSV → PostgreSQL (scripts/ingest_pipeline.py)
ingest = ["psycopg[binary]>=3.1"]

[tool.setuptools.packages.find]
where = ["."]
include = ["fin_sense_data_module*"]

[tool.setuptools.package-data]
fin_sense_data_module = ["py.typed"]
